[package]
name = "jaq-all"
version = "0.1.0-beta"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Run & compile jq filters and read & write data"
repository = "https://github.com/01mf02/jaq"
keywords = ["jq"]
rust-version = "1.70"

[features]
default = ["formats"]
formats = ["jaq-fmts/all"]

[dependencies]
jaq-core = { workspace = true }
jaq-std  = { workspace = true }
jaq-json = { workspace = true }
jaq-fmts = { workspace = true }

codesnake = { version = "0.2" }
unicode-width = "0.1.13"

[dev-dependencies]
serde_json = "1.0"
