[package]
name = "jaq-core"
version = "2.0.0-epsilon"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Interpreter for the jaq language"
repository = "https://github.com/01mf02/jaq"
keywords = ["json", "query", "jq"]
categories = ["parser-implementations", "compilers"]
rust-version = "1.63"

[features]
default = ["std"]
std = []

[dependencies]
dyn-clone = "1.0"
once_cell = "1.16.0"
typed-arena = "2.0.2"

[dev-dependencies]
jaq-json = { path = "../jaq-json", features = ["serde_json"] }
serde_json = "1.0"
