[package]
name = "jaq-interpret"
version = "1.0.0-alpha"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Interpreter for the jaq language"
repository = "https://github.com/01mf02/jaq"
keywords = ["json", "query", "jq"]
categories = ["compilers"]
rust-version = "1.62"

[features]
default = ["std", "serde_json"]
std = []

[dependencies]
jaq-syn = { version = "1.0.0-alpha", path = "../jaq-syn" }
ahash = "0.7.6"
dyn-clone = "1.0"
hifijson = "0.2.0"
indexmap = "2.0"
itertools = "0.10.3"
once_cell = "1.16.0"
serde_json = { version = "1.0.81", optional = true }

[dev-dependencies]
jaq-parse = { version = "1.0.0-alpha", path = "../jaq-parse" }
