# SPDX-FileCopyrightText: 2021 Michael Färber
#
# SPDX-License-Identifier: MIT

[package]
name = "jaq-interpret"
version = "1.4.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Interpreter for the jaq language"
repository = "https://github.com/01mf02/jaq"
keywords = ["json", "query", "jq"]
categories = ["compilers"]
rust-version = "1.63"

[features]
default = ["std", "hifijson", "serde_json"]
std = []

[dependencies]
jaq-syn = { version = "1.1.0", path = "../jaq-syn" }
ahash = "0.8.6"
dyn-clone = "1.0"
hifijson = { version = "0.2.0", optional = true }
indexmap = "2.0"
once_cell = "1.16.0"
serde_json = { version = "1.0.81", optional = true }

[dev-dependencies]
jaq-parse = { version = "1.0.0", path = "../jaq-parse" }
