[package]
name = "jaq-json"
version = "1.1.3"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "JSON values for jaq"
repository = "https://github.com/01mf02/jaq"
keywords = ["json", "query", "jq"]
categories = ["data-structures"]
rust-version = "1.70"

[features]
default = ["parse", "std"]
parse = ["cbor", "json", "toml", "xml", "yaml"]
std = ["hifijson/std"]

cbor = ["ciborium-ll", "ciborium-io"]
json = ["hifijson"]
toml = ["toml_edit"]
xml = ["xmlparser"]
yaml = ["saphyr-parser", "base64"]

[dependencies]
jaq-core = { version = "2.1.0", path = "../jaq-core" }
jaq-std  = { version = "2.1.0", path = "../jaq-std" }

bstr = "1"
bytes = "1"
foldhash = { version = "0.1", default-features = false }
indexmap = { version = "2.0", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
ryu = "1.0.20"
self_cell = "1.2.0"
serde_json = { version = "1.0.81", default-features = false, features = ["alloc"], optional = true }

# parsers
base64 = { version = "0.22", optional = true }
ciborium-io = { version = "0.2.2", optional = true, features = ["std"] }
ciborium-ll = { version = "0.2.2", optional = true }
hifijson = { version = "0.2.0", default-features = false, features = ["alloc"], optional = true }
saphyr-parser = { version = "0.0.6", optional = true }
toml_edit = { version = "0.23.2", optional = true }
xmlparser = { version = "0.13.6", optional = true }
