[package]
name = "jaq-json"
version = "2.0.0-alpha"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "JSON values for jaq"
repository = "https://github.com/01mf02/jaq"
keywords = ["json", "query", "jq"]
categories = ["data-structures"]
rust-version = "1.70"

[features]
default = ["std"]
sync = []
std = ["hifijson/std"]

[dependencies]
jaq-core = { workspace = true }
jaq-std  = { workspace = true }

bstr = "1"
bytes = "1"
foldhash = { version = "0.1", default-features = false }
hifijson = { version = "0.5.0", default-features = false, features = ["alloc"] }
indexmap = { version = "2.0", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
ryu = "1.0.20"
self_cell = "1.2.0"
serde = { version = "1.0.81", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
serde_json = "1.0"
