[package]
name = "jaq-parse"
version = "1.0.0-gamma"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Parser for the jaq language"
repository = "https://github.com/01mf02/jaq"
keywords = ["json", "query", "jq"]
categories = ["parser-implementations"]

[dependencies]
chumsky = { version = "0.9.0", default-features = false }
jaq-syn = { version = "1.0.0-gamma", path = "../jaq-syn" }
