[package]
name = "jaq-parse"
version = "1.0.2"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Parser for the jaq language"
repository = "https://github.com/01mf02/jaq"
keywords = ["json", "query", "jq"]
categories = ["parser-implementations"]
rust-version = "1.64"

[dependencies]
chumsky = { version = "0.9.0", default-features = false }
jaq-syn = { version = "1.0.0", path = "../jaq-syn" }
