[package]
name = "jaq-play"
description = "Web interface for jaq"
version = "0.0.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
categories = ["wasm"]
readme = "README.md"
repository = "https://github.com/01mf02/jaq"
license = "MIT"
edition = "2021"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jaq-core = { path = "../jaq-core" }
jaq-std  = { path = "../jaq-std" }
jaq-json = { path = "../jaq-json" }

aho-corasick = "1.1.2"
codesnake = { version = "0.2" }
hifijson = "0.2"
log = "0.4.17"
unicode-width = "0.1.13"

console_log = { version = "1.0", features = ["color"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["DedicatedWorkerGlobalScope"] }
js-sys = { version = "0.3" }
