[package]
name = "jaq-play"
description = "Web interface for jaq"
version = "0.0.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
categories = ["wasm"]
readme = "README.md"
repository = "https://github.com/01mf02/jaq"
license = "MIT"
edition = "2021"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

# https://github.com/leptos-rs/cargo-leptos/issues/441
# https://github.com/fzyzcjy/flutter_rust_bridge/issues/2601
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O','--all-features']

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jaq-json = { path = "../jaq-json" }
jaq-ext  = { path = "../jaq-ext" }

aho-corasick = "1.1.2"
codesnake = { version = "0.2" }
log = "0.4.17"

console_log = { version = "1.0", features = ["color"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["DedicatedWorkerGlobalScope"] }
js-sys = { version = "0.3" }
