[package]
name = "jaq-std"
version = "2.1.2"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Standard library for jaq"
repository = "https://github.com/01mf02/jaq"
keywords = ["json", "query", "jq"]
rust-version = "1.69"

[features]
default = ["std", "format", "log", "math", "regex", "time"]
regex = ["regex-lite"]
std = []
format = ["aho-corasick", "base64", "urlencoding"]
math = ["libm"]
time = ["chrono"]

[dependencies]
jaq-core = { version = "2.1.0", path = "../jaq-core" }

bstr = "1"
hifijson = { version = "0.2.0", optional = true }
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "clock"], optional = true }
regex-lite = { version = "0.1", optional = true }
log = { version = "0.4.17", optional = true }
libm = { version = "0.2.7", optional = true }
aho-corasick = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
urlencoding = { version = "2.1.3", optional = true }

[dev-dependencies]
jaq-json = { path = "../jaq-json" }
serde_json = "1.0"
