[package]
name = "jaq-std"
version = "3.0.0-alpha"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Standard library for jaq"
repository = "https://github.com/01mf02/jaq"
keywords = ["json", "query", "jq"]
rust-version = "1.70"

[features]
default = ["std", "format", "log", "math", "regex", "time"]
regex = ["regex-bites"]
std = []
format = ["aho-corasick", "base64", "urlencoding"]
math = ["libm"]
time = ["jiff"]

[dependencies]
jaq-core = { workspace = true }

bstr = "1"
jiff = { version = "0.2.15", optional = true }
regex-bites = { version = "0.1", optional = true }
log = { version = "0.4.17", optional = true }
libm = { version = "0.2.7", optional = true }
aho-corasick = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
urlencoding = { version = "2.1.3", optional = true }

[dev-dependencies]
jaq-json = { workspace = true }
serde_json = "1.0"
