# SPDX-FileCopyrightText: 2021 Michael Färber
#
# SPDX-License-Identifier: MIT

[package]
name = "jaq-syn"
version = "1.1.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Syntax of the jaq language"
repository = "https://github.com/01mf02/jaq"
keywords = ["json", "query", "jq"]

[features]
default = ["serde"]

[dependencies]
serde = { version = "1.0.137", features = ["derive"], optional = true }
