[package]
name = "jaq-syn"
version = "1.6.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Parser for the jq language"
repository = "https://github.com/01mf02/jaq"
keywords = ["json", "query", "jq"]
categories = ["parser-implementations"]

[features]
default = ["serde"]

[dependencies]
serde = { version = "1.0.137", features = ["derive"], optional = true }
