[package]
name = "jaq"
version = "3.0.0-beta"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Just another JSON query tool"
repository = "https://github.com/01mf02/jaq"
keywords = ["json", "query", "jq"]
categories = ["command-line-utilities", "compilers", "parser-implementations"]
rust-version = "1.70"

[features]
default = ["mimalloc"]

[dependencies]
jaq-all  = { workspace = true }

dirs = { version = "6.0" }
env_logger = { version = "0.10.0", default-features = false }
log = { version = "0.4.17" }
mimalloc = { version = "0.1.29", default-features = false, optional = true }
rustyline = { version = "13.0.0", default-features = false, features = ["with-file-history"] }
tempfile = "3.3.0"
